Introduction section of the site
add main section of the site

--- a/index.html
+++ b/index.html
@@ -51,5 +51,30 @@
             </div>
         </div>
     </header>
+
+    <section class="About-the-site-container">
+        <div class="background-photo-box">
+            <img src="./img/background-home-phtoto.JPEG" alt="home-photo">
+            <div class="site-title-box">
+                <h1>You can find everything</h1>
+                <p>We can offer all types of furniture or home accessories</p>
+            </div>
+            <div class="About-the-site-button">
+                <button>Read more</button>
+            </div>
+            <div class="arrows-box">
+                <div class="left-arrow">
+                    <a href="#">
+                        <img src="./img/left-arrow.PNG" alt="arrow-icon">
+                    </a>
+                </div>
+                <div class="right-arrow">
+                    <a href="#">
+                        <img src="./img/right-arrow.PNG" alt="right-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
