Design history section
add Design history section
add section of styles

--- a/index.html
+++ b/index.html
@@ -76,5 +76,66 @@
             </div>
         </div>
     </section>
+
+    <section class="Design-history-cotainer">
+        <div class="container">
+            <div class="Design-history-box">
+                <div class="Design-history-title">
+                    <h2>Design history</h2>
+                    <p>Graphic design can be traced 
+                        all the way back to 15,000 BC, 
+                        when the first known visual 
+                        communications arose. These 
+                        pictographs and symbols are 
+                        present in the Lascaux caves 
+                        in southern France. Fast-forward 
+                        several thousand years, and you’ll 
+                        discover the Blau Monument.</p>
+                </div>
+                <div class="Design-history-img-box">
+                    <img src="./img/mein-hous-photo.JPEG" alt="house-interior-photo">
+                </div>
+            </div>
+            <div class="Design-history-box-rows">
+                <div class="rows">
+                    <img src="./img/photo-modern.JPEG" alt="modern-photo">
+                    <h2>Modern</h2>
+                    <p>The modern architecture 
+                        and the interior design 
+                        of this massive luxury 
+                        home represent the luxury 
+                        lifestyle at its best!</p>
+                </div>
+                <div class="rows">
+                    <img src="./img/fashionable.JPEG" alt="fashionable-photo">
+                    <h2>Fashionable</h2>
+                    <p>If you want a golden rule 
+                        that will fit everything, 
+                        this is it: Have nothing in 
+                        your houses that you do not 
+                        know to be useful or believe to be beautiful.</p>
+                </div>
+                <div class="rows">
+                    <img src="./img/minimalistic.JPEG" alt="minimalist-photo">
+                    <h2>Minimalistic</h2>
+                    <p>Being a minimalist means 
+                        intentionally promoting 
+                        the things we most value 
+                        and removing everything that 
+                        distracts us from it.</p>
+                </div>
+                <div class="rows">
+                    <img src="./img/premium.JPEG" alt="premium-photo">
+                    <h2>Premium</h2>
+                    <p>Graphic designers play an 
+                        important role in producing 
+                        various types of designs to
+                         meet the promotional needs 
+                         of a business, especially in 
+                         designing.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
