--- a/index.html
+++ b/index.html
@@ -137,5 +137,56 @@
             </div>
         </div>
     </section>
+
+    <section class="most-often-container">
+        <div class="container">
+            <h2>What do our users buy most often?</h2>
+            <div class="Number-of-percentages-container">
+                    <div class="percentages-paragraph">
+                        <p>Sofa</p>
+                        <span>80%</span>
+                    </div>
+                    <div class="percentages">
+                        <div class="main"></div>
+                        <div class="unmain"></div>
+                    </div>
+                    <div class="percentages-paragraph">
+                        <p>Table</p>
+                        <span>70%</span>
+                    </div>
+                    <div class="percentages">
+                        <div class="main"></div>
+                        <div class="unmain"></div>
+                    </div>
+                    <div class="percentages-paragraph">
+                        <p>Lamp</p>
+                        <span>60%</span>
+                    </div>
+                    <div class="percentages">
+                        <div class="main"></div>
+                        <div class="unmain"></div>
+                    </div>
+                    <div class="percentages-paragraph">
+                        <p>Other</p>
+                        <span>57%</span>
+                    </div>
+                    <div class="percentages">
+                        <div class="main"></div>
+                        <div class="unmain"></div>
+                    </div>
+            </div> 
+            <div class="about-elsie-container">
+                <div class="elise-img">
+                    <img src="./img/elsie.JPEG" alt="Elsie de Wolfe-photo">
+                </div>
+                <div class="elsie-paragraph">
+                    <p>“I am going to make everything 
+                        around me beautiful, that will be my life.”
+                    </p>
+                    <span> – Elsie de Wolfe. 1870</span>
+                </div>
+            </div>   
+        </div>
+    </section>
 </body>
 </html>
