--- a/index.html
+++ b/index.html
@@ -188,5 +188,42 @@
             </div>   
         </div>
     </section>
+
+    <section class="Internal-interior">
+        <div class="container">
+            <div class="Internal-interior-container">
+                <div class="Internal-interior-row">
+                    <div class="rooms-title">
+                        <h2>For Kitchen</h2>
+                        <p>Kitchen Cabinet, Accessories and etc.</p>
+                        <div class="click-it">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <img src="./img/kitchen.JPEG" alt="kitchen-photo">
+                </div>
+                <div class="Internal-interior-row">
+                    <div class="rooms-title">
+                        <h2>For Hall</h2>
+                        <p>Chairs, Tables, Lamps, Dishes and etc.</p>
+                        <div class="click-it">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <img src="./img/hall.JPEG" alt="hall-photo">
+                </div>
+                <div class="Internal-interior-row">
+                    <div class="rooms-title">
+                        <h2>For Bedroom</h2>
+                        <p>Beds, Lamps, Bedside Tables and etc.</p>
+                        <div class="click-it">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <img src="./img/bedroom.JPEG" alt="bedroom-photo">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
