--- a/index.html
+++ b/index.html
@@ -225,5 +225,13 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="just-text">
+                <h2>2023, Georgia</h2>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
